Using robots nuxt module, trying to fix wrong title style on mobile (#8)

--- a/frontend/assets/style/grid.css
+++ b/frontend/assets/style/grid.css
@@ -7,8 +7,8 @@
 .main-title {
   font-size: clamp(3rem, 7vw, 5rem);
   font-family: 'Inter', sans-serif;
-  font-weight: 600;
-  letter-spacing: calc(-0.2rem + -0.05vw);
+  font-weight: bolder;
+  letter-spacing: calc(-0.1rem + -0.02vw);
   line-height: 1.1;
   max-width: 48rem;
 }
